tests/snapshots/test_runner__tests__compiler__typecheck__record_update_4.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo = | x:String => [x]

let a = { x: 2 y: {z: 3} }
let b = a.{ x.foo() } // expected String, got Integer

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/record_update_4.kk:4:13
  │
4 │ let b = a.{ x.foo() } // expected String, got Integer
  │             ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - String      | + Integer   |
    +---------------+-------------+
